fixed color contrast error

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -266,7 +266,7 @@ input[type="checkbox"] {
 #button {
     width: 100%;
     padding: 10px;
-    background-color: var(--accent1-color);
+    background-color: var(--secondary-color);
     color: white;
     border: none;
     border-radius: 4px;
@@ -276,5 +276,5 @@ input[type="checkbox"] {
 }
 
 #button:hover {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
 }
